navbar centered logo no longer blocks clicks to other elements nav overflow is now hidden

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -5026,12 +5026,15 @@ nav {
   background-color: #ee6e73;
   width: 100%;
   height: 56px;
-  line-height: 56px; }
+  line-height: 56px;
+  overflow: hidden; }
+  nav a {
+    color: #fff; }
   nav .nav-wrapper {
     position: relative;
     height: 100%; }
-  nav a {
-    color: #fff; }
+    nav .nav-wrapper i {
+      font-size: 2rem; }
   @media only screen and (min-width : 993px) {
     nav a.button-collapse {
       display: none; }
@@ -5040,7 +5043,8 @@ nav {
     float: left;
     position: relative;
     z-index: 1;
-    height: 56px; }
+    height: 56px;
+    color: #fff; }
     nav a.button-collapse i {
       font-size: 2.7rem;
       height: 56px;
@@ -5051,25 +5055,36 @@ nav {
     display: inline-block;
     font-size: 2.1rem;
     padding: 0; }
+    nav .brand-logo.center {
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
     @media only screen and (max-width : 992px) {
       nav .brand-logo {
-        left: 0;
-        width: 100%;
-        text-align: center;
-        z-index: 0; } }
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%); } }
     nav .brand-logo.right {
       right: 0.5rem;
       padding: 0; }
   nav ul {
     margin: 0; }
     nav ul li {
-      float: left;
-      padding: 0px;
       -webkit-transition: background-color 0.3s;
       -moz-transition: background-color 0.3s;
       -o-transition: background-color 0.3s;
       -ms-transition: background-color 0.3s;
-      transition: background-color 0.3s; }
+      transition: background-color 0.3s;
+      float: left;
+      padding: 0px; }
       nav ul li:hover, nav ul li.active {
         background-color: rgba(0, 0, 0, 0.1); }
     nav ul a {
@@ -5124,9 +5139,6 @@ nav {
   nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
     height: 64px;
     line-height: 64px; }
-
-  nav .nav-wrapper i {
-    font-size: 2rem; }
 
   .navbar-fixed {
     height: 64px; }
