--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -5,32 +5,42 @@ nav {
   width: 100%;
   height: $navbar-height-mobile;
   line-height: $navbar-height-mobile;
+  overflow: hidden;
+
+  a { color: #fff; }
 
   .nav-wrapper {
     position: relative;
     height: 100%;
-  }
 
-  a { color: #fff; }
+    i {
+      font-size: 2rem;
+    }
+  }
 
   @media #{$large-and-up} {
     a.button-collapse { display: none; }
   }
 
 
+  // Collapse button
   a.button-collapse {
     float: left;
     position: relative;
     z-index: 1;
     height: $navbar-height-mobile;
+    color: #fff;
 
     i {
+
       font-size: 2.7rem;
       height: $navbar-height-mobile;
       line-height: $navbar-height-mobile;
     }
   }
 
+
+  // Logo
   .brand-logo {
     position: absolute;
     color: #fff;
@@ -38,11 +48,16 @@ nav {
     font-size: 2.1rem;
     padding: 0;
 
+    &.center {
+      top: 50%;
+      left: 50%;
+      @include transform(translate(-50%, -50%));
+    }
+
     @media #{$medium-and-down} {
-      left: 0;
-      width: 100%;
-      text-align: center;
-      z-index: 0;
+      top: 50%;
+      left: 50%;
+      @include transform(translate(-50%, -50%));
     }
 
     &.right {
@@ -51,13 +66,15 @@ nav {
     }
   }
 
+
+  // Navbar Links
   ul {
     margin: 0;
 
     li {
+      @include transition(background-color .3s);
       float: left;
       padding: 0px;
-      @include transition(background-color .3s);
 
       &:hover, &.active {
         background-color: rgba(0,0,0,.1);
@@ -124,9 +141,6 @@ nav {
   nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
     height: $navbar-height;
     line-height: $navbar-height;
-  }
-  nav .nav-wrapper i {
-    font-size: 2rem;
   }
   .navbar-fixed {
     height: $navbar-height;
